화면수정 배포

--- a/homepage/cup00005.html
+++ b/homepage/cup00005.html
@@ -43,7 +43,7 @@
 						<dd>
 							<div class="inputBox">
 								<input type="text" name="i00005_billToParty" class="inp Mandate" id="i00005_billToParty" placeholder="Party Name" maxlength="50">
-								<button class="inpReset"></button>
+								<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 							</div>
 						</dd>
 					</dl>
@@ -52,7 +52,7 @@
 						<dd>
 							<div class="inputBox full">
 								<input type="text" name="i00005_addressLine1" class="inp Mandate" id="i00005_addressLine1" placeholder="Worldcup Buk-Ro 140 Nuritkum Sqr. 16F" maxlength="80">
-								<button class="inpReset"></button>
+								<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 							</div>
 						</dd>
 					</dl>
@@ -61,7 +61,7 @@
 						<dd>
 							<div class="inputBox full">
 								<input type="text" name="i00005_addressLine2" class="inp" id="i00005_addressLine2" placeholder="Mapo-Gu, Sang Am-Dong" maxlength="80">
-								<button class="inpReset"></button>
+								<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 							</div>
 						</dd>
 					</dl>
@@ -72,7 +72,7 @@
 								<div class="inner">
 									<input type="text" name="i00005_stateProvince" class="inp autoSch ty2 code Readonly" id="i00005_stateProvince" readonly="readonly" maxlength="50">
 									<input type="text" name="i00005_city" class="inp autoSch Mandate ty2 name" id="i00005_city" placeholder="Type City" maxlength="50">
-									<button class="inpReset"></button>
+									<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 								</div>
 							</div>
 						</dd>
@@ -334,7 +334,7 @@
 							<div class="inputBox zipCode">
 								<div class="inner">
 									<input type="text" name="i00005_zipCode" class="inp" id="i00005_zipCode" placeholder="Zip Code">
-									<button class="inpReset"></button>
+									<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 								</div>
 							</div>
 						</dd>
@@ -346,7 +346,7 @@
 						<dd>
 							<div class="inputBox full">
 								<input type="text" name="i00005_department" class="inp full" id="i00005_department" placeholder="Department Name" maxlength="80">
-								<button class="inpReset"></button>
+								<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 							</div>
 						</dd>
 					</dl>
@@ -371,7 +371,7 @@
 						<dd>
 							<div class="inputBox">
 								<input type="text" name="i00005_phoneNumber" class="inp Mandate" id="i00005_phoneNumber" placeholder="Phone Number">
-								<button class="inpReset"></button>
+								<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 							</div>
 						</dd>
 					</dl>
@@ -380,13 +380,13 @@
 						<dd>
 							<div class="inputBox">
 								<input type="text" name="i00005_faxNumber" class="inp" id="i00005_faxNumber" placeholder="Fax Number">
-								<button class="inpReset"></button>
+								<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 							</div>
 						</dd>
 					</dl>
 					<div class="joinBtn">
 						<div class="btns">
-							<button class="btn" id="i00005_next">Next</button>
+							<button type="button" class="btn" id="i00005_next">Next</button> <!-- 2019-02-01 수정 -->
 						</div>
 					</div>
 				</div>
