--- a/htmlList.html
+++ b/htmlList.html
@@ -140,13 +140,19 @@
                         <td></td>
                         <td></td>
                         <td><a target="_blank" href="common/nav.html">nav.html</a></td>
-                        <td>nav</td>
+                        <td>
+							nav <br />
+							<span class="red">2019-02-01 수정</span>
+						</td>
                     </tr>
 					<tr>
                         <td></td>
                         <td></td>
                         <td><a target="_blank" href="common/tabwrap.html">tabwrap.html</a></td>
-                        <td>content tab</td>
+                        <td>
+							content tab <br />
+							<span class="red">2019-02-01 수정</span>
+						</td>
                     </tr>
 					<tr>
                         <td></td>
@@ -175,7 +181,8 @@
                         <td></td>
                         <td><a target="_blank" href="login/cup10001.html">login/cup10001.html</a></td>
                         <td class="red">
-							2019-01-29 수정
+							2019-01-29 수정 <br />
+							2019-02-01 수정
 						</td>
                     </tr>
 					<tr>
@@ -184,7 +191,8 @@
                         <td><a target="_blank" href="login/cup10002.html">login/cup10002.html</a></td>
                         <td>
 							제공된 썸네일 기본 이미지가 없어서 임의로 적용해 놓음 추후 변경 예정 <br />
-							<span class="red">2019-01-29 수정</span>
+							<span class="red">2019-01-29 수정</span> <br />
+							<span class="red">2019-02-01 수정</span>
 						</td>
                     </tr>
 					<tr>
@@ -192,20 +200,25 @@
                         <td></td>
                         <td><a target="_blank" href="login/cup10003.html">login/cup10003.html</a></td>
                         <td class="red">
-							2019-01-29 수정
+							2019-01-29 수정 <br />
+							2019-02-01 수정
 						</td>
                     </tr>
 					<tr>
                         <td>잊은암호 변경요청</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10004.html">login/cup10004.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-01 수정
+						</td>
                     </tr>
 					<tr>
                         <td>잊은암호 변경</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10005.html">login/cup10005.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-01 수정
+						</td>
                     </tr>
 					<tr>
                         <td>신규가입 확인(메일)</td>
@@ -219,13 +232,17 @@
                         <td>신규가입 확인</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10006.html">login/cup10006.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-01 수정
+						</td>
                     </tr>
 					<tr>
                         <td>신규가입 요청 확인</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10007.html">login/cup10007.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-01 수정
+						</td>
                     </tr>
 					<tr>
                         <td>잊은암호변경 확인(메일)</td>
@@ -237,7 +254,9 @@
                         <td>잊은암호변경 확인</td>
                         <td></td>
                         <td><a target="_blank" href="login/cup10009.html">login/cup10009.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-01 수정
+						</td>
                     </tr>
 					<tr>
                         <td>Home</td>
@@ -367,27 +386,34 @@
                         <td>부가서비스선택</td>
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00002.html">homepage/cup00002.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-01 수정
+						</td>
                     </tr>
 					<tr>
                         <td>플랫폼선택</td>
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00003.html">homepage/cup00003.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-01 수정
+						</td>
                     </tr>
 					<tr>
                         <td>계약정보입력</td>
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00005.html">homepage/cup00005.html</a></td>
                         <td class="red">
-							2019-01-29 수정
+							2019-01-29 수정 <br />
+							2019-02-01 수정
 						</td>
                     </tr>
 					<tr>
                         <td>계약서확인</td>
                         <td></td>
                         <td><a target="_blank" href="homepage/cup00006.html">homepage/cup00006.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-01 수정
+						</td>
                     </tr>
 					<tr>
                         <td>계약정보확인</td>
