--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -140,13 +140,19 @@
                         <td></td>
                         <td></td>
                         <td><a target="_blank" href="common/nav.html">nav.html</a></td>
-                        <td>nav</td>
+                        <td>
+							nav <br />
+							<span class="red">2019-02-01 수정</span>
+						</td>
                     </tr>
 					<tr>
                         <td></td>
                         <td></td>
                         <td><a target="_blank" href="common/tabwrap.html">tabwrap.html</a></td>
-                        <td>content tab</td>
+                        <td>
+							content tab <br />
+							<span class="red">2019-02-01 수정</span>
+						</td>
                     </tr>
 					<tr>
                         <td></td>
@@ -460,7 +466,9 @@
                         <td>서비스목록</td>
                         <td></td>
                         <td><a target="_blank" href="service_a/cup10701.html">cup10701.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-02-01 수정
+						</td>
                     </tr>
 					<tr>
                         <td>서비스관리</td>
@@ -469,7 +477,8 @@
                         <td class="red">
 							2019-01-29 수정 <br />
 							2019-01-30 수정 <br />
-							2019-01-31 수정
+							2019-01-31 수정 <br />
+							2019-02-01 수정
 						</td>
                     </tr>
 					<tr>
