--- a/case/index.html
+++ b/case/index.html
@@ -43,22 +43,23 @@
 			<div class="inner">
 				<nav>
 					<div class="menuAll">
-						<button class="allBtn">
+						<button type="button" class="allBtn">
+							<!-- 2019-02-01 수정 -->
 							<span>Menu</span>
 						</button>
 					</div>
 					<div class="gnb">
 						<ul class="gnbList">
 							<li>
-								<div class="gnbTit">Organization</div>
+								<div class="gnbTit ty1">Organization</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="#">Organization List</a></li>
 									<li><a href="#">Organization</a></li>
 								</ul>
-								<button class="clip on"></button>
+								<button type="button" class="clip on"></button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
-								<div class="gnbTit">Warehousing</div>
+								<div class="gnbTit ty2">Subscription</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="">Subscription List</a></li>
 									<li><a href="">Subscription List (Waiting)</a></li>
@@ -66,10 +67,10 @@
 									<li><a href="">Subscription List (Cancelled)</a></li>
 									<li><a href="">Subscription List (Withdraw)</a></li>
 								</ul>
-								<button class="clip"></button>
+								<button type="button" class="clip"></button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
-								<div class="gnbTit">Billing</div>
+								<div class="gnbTit ty3">Billing</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="">Billing Policy List</a></li>
 									<li><a href="">Invoice List</a></li>
@@ -79,42 +80,42 @@
 									<li><a href="">Invoice List (Cancelled)</a></li>
 									<li><a href="">Scheduler and History</a></li>
 								</ul>
-								<button class="clip"></button>
+								<button type="button" class="clip"></button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
-								<div class="gnbTit">Usage</div>
+								<div class="gnbTit ty4">Usage</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="">Usage List</a></li>
 									<li><a href="">Usage List (Seat)</a></li>
 									<li><a href="">Usage List (Transaction)</a></li>
 									<li><a href="">Transaction List</a></li>
 								</ul>
-								<button class="clip"></button>
+								<button type="button" class="clip"></button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
-								<div class="gnbTit">Service</div>
+								<div class="gnbTit ty5">Pricing</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="#">Service List</a></li>
 									<li><a href="#">Tariff List</a></li>
 									<li><a href="">Service Group List</a></li>
 								</ul>
-								<button class="clip"></button>
+								<button type="button" class="clip"></button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
-								<div class="gnbTit">Notice</div>
+								<div class="gnbTit ty6">Notice</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="#">Notice List</a></li>
 								</ul>
-								<button class="clip"></button>
+								<button type="button" class="clip"></button> <!-- 2019-02-01 수정 -->
 							</li>
 							<li>
-								<div class="gnbTit">Administration</div>
+								<div class="gnbTit ty7">Administration</div> <!-- 2019-02-01 수정 -->
 								<ul class="dept">
 									<li><a href="#">System Code List</a></li>
 									<li><a href="#">Role List</a></li>
 									<li><a href="#">Mail Transmit History</a></li>
 								</ul>
-								<button class="clip"></button>
+								<button type="button" class="clip"></button> <!-- 2019-02-01 수정 -->
 							</li>
 						</ul>
 					</div>
@@ -131,35 +132,35 @@
 									<span>House B/L</span>
 									<span>OBK-000468</span>
 								</a>
-								<button class="tabClose">Close</button>
+								<button type="button" class="tabClose">Close</button>
 							</li>
 							<li>
 								<a href="#">
 									<span>House B/L</span>
 									<span>OBK-000468</span>
 								</a>
-								<button class="tabClose">Close</button>
+								<button type="button" class="tabClose">Close</button>
 							</li>
 							<li>
 								<a href="#">
 									<span>House B/L</span>
 									<span>OBK-000468</span>
 								</a>
-								<button class="tabClose">Close</button>
+								<button type="button" class="tabClose">Close</button>
 							</li>
 							<li class="on">
 								<a href="#">
 									<span>House B/L</span>
 									<span>OBK-000468</span>
 								</a>
-								<button class="tabClose">Close</button>
+								<button type="button" class="tabClose">Close</button>
 							</li>
 							<li>
 								<a href="#">
 									<span>House B/L</span>
 									<span>OBK-000468</span>
 								</a>
-								<button class="tabClose">Close</button>
+								<button type="button" class="tabClose">Close</button>
 							</li>
 						</ul>
 						<div class="tabListBox">
