--- a/homepage/cup00006.html
+++ b/homepage/cup00006.html
@@ -133,7 +133,7 @@
 							<dd>
 								<div class="inputBox">
 									<input type="text" name="i00006_billToParty" class="inp Readonly" id="i00006_billToParty" readonly="readonly" value="Customer Name" maxlength="80">
-									<button class="inpReset"></button>
+									<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 								</div>
 							</dd>
 						</dl>
@@ -142,7 +142,7 @@
 							<dd>
 								<div class="inputBox full">
 									<input type="text" name="i00006_addressLine1" class="inp Readonly" id="i00006_addressLine1" readonly="readonly" value="Address Line1" maxlength="80">
-									<button class="inpReset"></button>
+									<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 								</div>
 							</dd>
 						</dl>
@@ -151,7 +151,7 @@
 							<dd>
 								<div class="inputBox full">
 									<input type="text" name="i00006_addressLine2" class="inp Readonly" id="i00006_addressLine2" readonly="readonly" value="Address Line2" maxlength="80">
-									<button class="inpReset"></button>
+									<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 								</div>
 							</dd>
 						</dl>
@@ -162,7 +162,7 @@
 									<div class="inner">
 										<input type="text" name="i00006_stateProvince" class="inp autoSch ty2 code Readonly" id="i00006_stateProvince" readonly="readonly" value="State" maxlength="50">
 										<input type="text" name="i00006_city" class="inp autoSch ty2 name Readonly" id="i00006_city" value="Type City" maxlength="50">
-										<button class="inpReset"></button>
+										<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 									</div>
 								</div>
 							</dd>
@@ -422,7 +422,7 @@
 								<div class="inputBox zipCode">
 									<div class="inner">
 										<input type="text" name="i00006_zipCode" class="inp Readonly" id="i00006_zipCode" readonly="readonly" value="Zip Code">
-										<button class="inpReset"></button>
+										<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 									</div>
 								</div>
 							</dd>
@@ -433,7 +433,7 @@
 							<dd>
 								<div class="inputBox full">
 									<input type="text" name="i00006_department" class="inp Readonly" id="i00006_department" readonly="readonly" value="Department Name" maxlength="80">
-									<button class="inpReset"></button>
+									<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 								</div>
 							</dd>
 						</dl>
@@ -458,7 +458,7 @@
 							<dd>
 								<div class="inputBox">
 									<input type="text" name="i00006_phoneNumber" class="inp Readonly" id="i00006_phoneNumber" readonly="readonly" value="Phone Number">
-									<button class="inpReset"></button>
+									<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 								</div>
 							</dd>
 						</dl>
@@ -467,7 +467,7 @@
 							<dd>
 								<div class="inputBox">
 									<input type="text" name="i00006_faxNumber" class="inp Readonly" id="i00006_faxNumber" readonly="readonly" value="Fax Number">
-									<button class="inpReset"></button>
+									<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 								</div>
 							</dd>
 						</dl>
@@ -475,7 +475,7 @@
 							<p class="txt" id="i00006_finalConfirm">By clicking “Confirm Subscription” button, you confirm to subscription of OPUS Logistics Service</p>
 							<div class="btns">
 								<a href="" class="btn" id="i00006_backBillto">Back</a>
-								<button class="btn" id="i00006_confirmSubscription">Confirm Subscription</button>
+								<button type="button" class="btn" id="i00006_confirmSubscription">Confirm Subscription</button> <!-- 2019-02-01 수정 -->
 							</div>
 						</div>
 					</div>
