--- a/login/cup10001.html
+++ b/login/cup10001.html
@@ -43,7 +43,7 @@
 							<div class="inputBox full">
 								<!-- 2019-01-29 클래스 추가 -->
 								<input type="text" name="i10001_userId" class="inp Mandate" id="i10001_userId" maxlength="50" placeholder="Email or User ID" />
-								<button class="inpReset"></button>
+								<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
 							</div>
 						</div>
 						<div class="loginCheck">
@@ -54,7 +54,7 @@
 						<div class="joinBtn">
 							<a href="#" id="i10001_newAccountLb">New Account</a>
 							<div class="btns">
-								<button class="btn" id="i10001_next">Next</button>
+								<button type="button" class="btn" id="i10001_next">Next</button> <!-- 2019-02-01 수정 -->
 							</div>
 						</div>
 					</div>
