--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -341,7 +341,7 @@
 					<tr>
                         <td>가입정보관리</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="subscription_a/cup10505.html">cup10505.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
@@ -478,7 +478,8 @@
 							2019-01-29 수정 <br />
 							2019-01-30 수정 <br />
 							2019-01-31 수정 <br />
-							2019-02-01 수정
+							2019-02-01 수정 <br />
+							2019-02-07 수정
 						</td>
                     </tr>
 					<tr>
