--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -159,6 +159,38 @@
 	</div>
 	<!-- //souce code 뷰어 -->
 
+
+
+
+
+	<h2>input타입 - Edit_Organization</h2>
+	<div class="inputBox Edit_Organization">
+		<div class="thumb">
+			<img src="../static/images/common/icon/icon_logo_small.png" alt="" />
+		</div>
+		<input type="text" name="" class="inp" id="">
+		<button type="button" class="inpReset"></button>
+	</div>
+	<!-- souce code 뷰어 -->
+	<div class="box">
+		<pre class="brush: html;">
+			<div class="inputBox Edit_Organization">
+				<div class="thumb">
+					<img src="../static/images/common/icon/icon_logo_small.png" alt="" />
+				</div>
+				<input type="text" name="" class="inp" id="">
+				<button type="button" class="inpReset"></button>
+			</div>
+		</pre>
+	</div>
+	<!-- //souce code 뷰어 -->
+
+
+
+
+
+
+
 	<h2>input타입 - Edit_Time</h2>
 	<div class="inputBox Edit_Time">
 		<input type="text" name="cup10702_modifiedTime" class="inp quantity" id="cup10702_modifiedTime" placeholder="-- : --" maxlength="4">
@@ -828,10 +860,6 @@ value="" 값과 option text를 비교하여 검색하는 기능 두가지가 동
 	<!-- //souce code 뷰어 -->
 
 
-
-
-
-
 	<h2>동의 체크</h2>
 	<div class="agreeChk">
 		<p class="txt">I am sure to read and to agree the terms</p>
@@ -851,9 +879,6 @@ value="" 값과 option text를 비교하여 검색하는 기능 두가지가 동
 		</pre>
 	</div>
 	<!-- //souce code 뷰어 -->
-
-
-
 
 
 
