--- a/service_a/cup10702.html
+++ b/service_a/cup10702.html
@@ -120,7 +120,8 @@
 							</ul>
 						</div>
 					</nav>
-					<div class="content">
+					<div class="content editBtns">
+						<!-- 2019-02-07 클래스 추가 -->
 						<div class="tabWrap">
 							<ul class="tabList">
 								<li class="home single">
@@ -184,7 +185,8 @@
 									<!--// 2019-01-29 수정 -->
 								</div>
 							</div>
-							<div class="inner saveAdd">
+							<div class="inner">
+								<!-- 2019-02-07 클래스 수정 -->
 								<div class="lsCont">
 									<h3 class="tit" id="cup10702_basicLb">Basic</h3>
 									<ul class="itemList2">
@@ -219,16 +221,18 @@
 											<dl class="inpItem">
 												<dt id="cup10702_serviceAliasLb">Service Alias</dt>
 												<dd>
+													<!-- 2019-02-07 수정 -->
 													<div class="inputBox">
 														<input type="text" name="cup10702_serviceAlias" class="inp" id="cup10702_serviceAlias">
 														<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
-														<div class="tooltip">
-															<div class="tips">
-																<strong class="tit">Alias</strong>
-																<p class="txt">Alias can be service <br />code or abbreviation.</p>
-															</div>
+													</div>
+													<div class="tooltip">
+														<div class="tips">
+															<strong class="tit">Alias</strong>
+															<p class="txt">Alias can be service <br />code or abbreviation.</p>
 														</div>
 													</div>
+													<!--// 2019-02-07 수정 -->
 												</dd>
 											</dl>
 										</li>
@@ -352,7 +356,8 @@
 
 								</div>
 							</div>
-							<div class="saveDiv">
+							<div class="editBtns">
+								<!-- 2019-02-07 클래스 수정 -->
 								<button type="button" class="btn basic" id="cup10702_Save">Save</button> <!-- 2019-02-01 수정 -->
 							</div>
 						</div>
